# CW_3

./: README.md  config.py  main.py  pyproject.toml
src/: classes.py  utils.py
tests/: conftest.py  test_classes.py  test_data.py  test_utils.py
