[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["sergeyvakhrin <parlamentsv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
